--- a/templates/contact.ejs
+++ b/templates/contact.ejs
@@ -99,7 +99,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="contact-text-agileinfo">
                             <h4>Visit us</h4>
                             <p>B-17 IIT Mandi</p>
-                            <p>H.P,U.S.A</p>
+                            <p>H.P, India</p>
                         </div>
                         <div class="clearfix"></div>
                     </div>
