--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -136,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
                 <div class="col-md-5 w3ls-row">
                     <div class="col-md-6 col-sm-6 wthree-about-left">
-                        <img src="/images/gg.JPG" class="img-responsive" alt="" />
+                        <img src="/images/gg_1.jpeg" class="img-responsive" alt="" />
                     </div>
                     <div class="col-md-6 col-sm-6 w3ls-row alert wthree-about-right">
                         <img src="https://pps.whatsapp.net/v/t61.24694-24/328713479_2590194421146922_4878810379308977592_n.jpg?ccb=11-4&oh=01_AdSGfzoSwkyS5zL6LzbTPpzwgfK5p14hbA-o-AtUOIDWpw&oe=63FDDC62"
